dark mode, fixes

--- a/style.css
+++ b/style.css
@@ -34,10 +34,43 @@ body {
   background-size: cover;
   margin: 0px;
   padding: 0px;
-  overflow: hidden;
+  overflow: hidden; 
 }
+
+/* styles.css */
+body {
+  transition: background-color 0.5s ease;
+}
+
+.light-theme {
+  background-color: #fff;
+  color: #333;
+}
+
+.dark-theme {
+  background-color: #101010;
+  color: #fff;
+}
+
+.toggle-container {
+  position: fixed;
+  top: 11px;
+  margin-left: 4px;
+}
+
+.toggle-container label {
+  cursor: pointer;
+  color: white;
+  padding: 9px 8px;
+  background-color: #212121;
+  border-radius: 20px;
+}
+
+.toggle-container input[type="checkbox"] {
+  display: none;
+}
+
 .toolbar {
-  border: 2.5px #212121;
   position: relative;
   top: 0px;
 }
@@ -45,7 +78,6 @@ body {
   display: flex;
   flex-direction: column;
   flex-wrap: wrap;
-  height: 420px;
   width: auto;
   min-width: 130px;
   max-width: 130px;
@@ -89,8 +121,6 @@ option {
   height: 600px;
   box-shadow: 0 10px 20px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.23);
   width: 85%;
-  font-family: monospace;
-  font-size: 22px;
   box-shadow: none;
   max-height: 90vh;
   max-width: 99%;
@@ -104,7 +134,7 @@ option {
   backdrop-filter: blur(4px);
   -webkit-backdrop-filter: blur(4px);
   border-radius: 5px;
-  border: 2px solid rgba(43, 42, 42, 0.226);
+  border: 2px solid rgba(43, 42, 42, 0.086);
   resize: both;
   overflow: none;
   z-index: 2;
@@ -123,7 +153,7 @@ option {
   height: 100%;
 }
 #header-bar {
-  background: #212121;
+  background: transparent;
   width: 100%;
   display: flex;
   height: 40px;
@@ -369,14 +399,15 @@ summary::marker {
   transition: all 1s ease-in-out;
 }
 .header-options-bt {
-  background-color: rgba(128, 128, 128, 0.287);
+  background-color: #212121;
   margin: 2px 2px 2px 6.5px;
   font-weight: bold ;
   border-radius: 4px;
+  height: 35px;
   display: flex;
   align-items: center;
-  padding: 3px 6px 3px 6px;
-  border-radius:5px;
+  padding: 8px 14px 8px 14px;
+  border-radius:15px;
   transition: all ease-in-out 0.1s;
 }
 .header-options-bt:hover {
@@ -385,13 +416,13 @@ summary::marker {
   background-color: var(--color-theme);
 }
 .options-bar-svg {
-  background-color: rgba(255, 255, 255, 0.212);
   border-radius: 4px;
   margin: 0px 3px 0px 3px;
   border: 0.5px solid rgba(255, 255, 255, 0.151);
 }
 svg{
   filter:drop-shadow(1);
+  filter: brightness(100%);
 }
 .tool {
   transition: 0.3s ease-in-out;
@@ -401,15 +432,7 @@ svg{
   transition: 0.2s ease-in-out;
   transform: translateY(-3px);
 }
-.tool-svg {
-  border: 1px solid rgba(255, 255, 255, 0.18);
-  backdrop-filter: blur(0.2px);
-  -webkit-backdrop-filter: blur(0.2px);
-  background-color: rgba(204, 204, 204, 0.26);
-}
 .tool-svg:hover {
-  background: rgba(255, 255, 255, 0.418);
-  border: 1px solid rgba(255, 255, 255, 0.505);
   cursor:pointer;
 }
 .tool-description {
@@ -421,11 +444,11 @@ svg{
   font-size: 12.8px;
   text-rendering: optimizeLegibility;
   padding: 4.5px;
-  position: absolute;
+  position:absolute;
   font-weight: 500;
   top: -50px;
   left: 10px;
-  z-index: 1;
+  z-index: 1!important;
 }
 .color-apply{
   border-color: transparent;
@@ -435,9 +458,9 @@ svg{
   outline: none;
 }
 .tool-input {
-  width: 35px;
-  height: 35px;
-  background-color: rgba(204, 204, 204, 0.26);
+  width: 40px;
+  height: 40px;
+  background-color: rgba(204, 204, 204, 0.056);
   outline: none;
   border: 3.1px solid var(gray);
   border-radius: 10px;
@@ -448,6 +471,11 @@ svg{
   cursor: pointer;
   background: rgba(255, 255, 255, 0.418);
 }
+
+#font-size{
+  margin: none!important;
+}
+
 #rotated-align {
   transform: rotate(180deg);
 }
